# BoostCookbook

./: .gitignore  .travis.yml  .travis_build_and_test.sh  CMakeLists.txt  README.md  main.c
01_Application/: BoostAny.cpp  BoostArray.cpp  BoostBind.cpp  BoostBind2.cpp  BoostMovableButNotCopyable.cpp  BoostMove.cpp  BoostOptional.cpp  BoostTuple.cpp  BoostVariant.cpp  CMakeLists.txt  ProgramOptions.cpp  StaticVisitor.cpp  apples_oranges.cfg
02_ConvertingData/: CMakeLists.txt  NumbersToNumbers.cpp  NumbersToStrings.cpp  ParsingInput.cpp  ParsingSimpleInput.cpp  PolymorphicTypes.cpp  StringsToNumbers.cpp  UserdefinedTypes.cpp
03_ManagingResources/: CMakeLists.txt  FunctionalObjectsInVariable.cpp  ReferenceCountingClasses.cpp  ScopeExit.cpp  SmartPointersToArrays.cpp
04_CompileTimeTricks/: CMakeLists.txt  OperatorForTemplateParameter.cpp  TemplateFunctions.cpp  TypeFromNumber.cpp  TypeTraits.cpp
05_Threads/: Atomic.cpp  CMakeLists.txt  CreateThread.cpp  InterruptingThread.cpp  MultipleReadersSingleWriter.cpp  Mutex.cpp  ThreadGroup.cpp  ThreadLocal.cpp  WorkQueue.cpp
06_Tasks/: CMakeLists.txt  NetworkConnection.cpp  Task.cpp  Timers.cpp
07_Strings/: CMakeLists.txt  RegexMatch.cpp  RegexSearchReplace.cpp  ReplaceEraseStrings.cpp  SafePrintf.cpp  StringIterators.cpp  StringRefs.cpp  Strings.cpp
08_Metaprogramming/: CMakeLists.txt  TypesVector.cpp
09_Containers/: Bimap.cpp  CMakeLists.txt  ComparingStrings.cpp  SList.cpp  UnorderedSetAndMap.cpp
10_PlatformInformation/: CMakeLists.txt  DetectingCompilerSupport.cpp
10_PlatformInformation/ExportImportFunctionsAndClasses/: CMakeLists.txt  MyLib.cpp  MyLib.h  export.map  main.cpp
11_System/: CMakeLists.txt  Coroutines.cpp  FilesAndDirs.cpp  InterProcessCommunication.cpp
12_TipOfIceberg/: CMakeLists.txt  FooToTest.h  Graphs.cpp  Images.cpp  Math.cpp  Random.cpp  Test.cpp  Test1.cpp  Test2.cpp
Other/: CMakeLists.txt  README.txt  boost_range.cpp  boost_transform.cpp  icl.cpp
